added authorization so only the owner of the post or the admin can edit/delete it.

--- a/BloggerWebApi/appsettings.json
+++ b/BloggerWebApi/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "server=my-mysql;Port=3306;Database=blogapp;Uid=bloguser;Pwd=blogpass123"
   },
   "Cors": {
-    "AllowedOrigins": [ "*" ]
+    "AllowedOrigins": [ "http://localhost:5173"]
   },
   "AdminUser": {
     "UserName": "admin",
