--- a/BloggerWebApi/BloggerWebApi.csproj
+++ b/BloggerWebApi/BloggerWebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -30,9 +30,4 @@
 	<ItemGroup>
     <Folder Include="Services\" />
   </ItemGroup>
-
-	<Target Name="StartFrontendContainer" AfterTargets="PostBuildEvent">
-		<Exec Command="docker compose -f &quot;..\..\Blog-Web-App\BloggerWebApp\docker-compose.yml&quot; up -d" />
-	</Target>
-
 </Project>
